# building-llm-from-scratch

./: .gitignore  README.md  pyproject.toml
chapter_2/: main.ipynb
chapter_3/: main.ipynb
chapter_4/: main.ipynb  previous_chapters.py
chapter_5/: main.ipynb
chapter_6/: build_notebook.py  main.ipynb
chapter_7/: build_notebook.py  chapter02.py  chapter04.py  gpt_download.py  main.ipynb
