[project]
name = "building-llm-from-scratch"
version = "0.1.0"
description = "Building an LLM from scratch"
authors = [
    {name = "Amir Braham",email = "amirbrahamm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "tiktoken (>=0.13.0,<0.14.0)",
    "torch (>=2.12.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "safetensors (>=0.4.0,<1.0.0)",
    "huggingface-hub (>=0.20.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nbconvert = "^7.17.1"
ipykernel = "^7.3.0"

